user-promotion many to many done