@@ -5,6 +5,7 @@ import com.project.HotelManagementSystem.dto.user.UserDTO;
 import com.project.HotelManagementSystem.dto.user.UserResponse;
 import com.project.HotelManagementSystem.dto.user.UserUpdateDTO;
 import com.project.HotelManagementSystem.entity.User;
+import com.project.HotelManagementSystem.repository.PromotionRepository;
 import com.project.HotelManagementSystem.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
@@ -14,8 +15,10 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,9 +26,11 @@ public class UserService {
 
     private final UserRepository userRepository;
     private final ModelMapper modelMapper;
+    private final PromotionRepository promotionRepository;
 
     public UserCreateDTO createUser(UserCreateDTO userCreateDTO) {
         User user = modelMapper.map(userCreateDTO, User.class);
+        user.setPromotions(new HashSet<>(promotionRepository.findAllById(userCreateDTO.getPromotionIds())));
         this.userRepository.save(user);
         return modelMapper.map(user, UserCreateDTO.class);
     }
@@ -43,6 +48,7 @@ public class UserService {
             updatedUser.setDateOfBirth(user.getDateOfBirth());
             updatedUser.setNationality(user.getNationality());
             updatedUser.setPoint(user.getPoint());
+            updatedUser.setPromotions(new HashSet<>(promotionRepository.findAllById(userUpdateDTO.getPromotionIds())));
             User savedUser = userRepository.save(updatedUser);
             return modelMapper.map(savedUser, UserUpdateDTO.class);
         }
@@ -56,14 +62,14 @@ public class UserService {
         }
     }
 
-    public UserDTO findUserById(Long id) {
+    public UserUpdateDTO findUserById(Long id) {
         User user = this.userRepository.findById(id).get();
-        return modelMapper.map(user, UserDTO.class);
+        return modelMapper.map(user, UserUpdateDTO.class);
     }
 
     public List<UserDTO> findAllUsers() {
         List<User> users = this.userRepository.findAll();
-        return users.stream().map(user -> modelMapper.map(user,UserDTO.class)).toList();
+        return users.stream().map(user -> modelMapper.map(user,UserDTO.class)).collect(Collectors.toList());
     }
 
     public UserResponse findAllUsersWithPagination(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
